--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "immutable": "^3.8.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-immutable-proptypes": "^2.1.0",
+    "react-proptypes": "^1.0.0",
     "react-redux": "^5.0.5",
     "react-scripts": "1.0.10",
     "redux": "^3.7.1",
